--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,10 @@
 spring.application.name=ESDTask
 server.port = 8081
 
+spring.security.user.name=user
+spring.security.user.password=password
+
+
 # Spring data Config
 spring.datasource.url=jdbc:mysql://localhost:3306/ESDTask?createDatabaseIfNotExist=true
 spring.datasource.username=root
